[package]
name = "os-id"
version = "2.0.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
license = "BSL-1.0"
repository = "https://github.com/DoumanAsh/os-id"
readme = "README.md"
description = "Provides OS ids abstractions for process and thread"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
keywords = ["thread", "process", "id"]
categories = ["no-std", "os"]

[target.'cfg(unix)'.dependencies.libc]
version = "0.2"
default-features = false
