[package]
name = "os-id"
version = "3.1.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2021"
rust-version = "1.64.0"
license = "BSL-1.0"
repository = "https://github.com/DoumanAsh/os-id"
readme = "README.md"
description = "Provides OS ids abstractions for process and thread"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
keywords = ["thread", "process", "id"]
categories = ["no-std", "os"]

[target.'cfg(unix)'.dependencies.libc]
version = "0.2"
default-features = false
optional = true

[features]
default = ["process", "thread"]
# Enables process related code
process = []
# Enables thread related code
thread = ["libc"]
